@@ -1,3 +1,8 @@
+2003-04-16  Christian Ruppert <arc@users.sf.net>
+	* uwm/special.h: pointer grabs are now confined to the screen's root
+	  window to avoid trouble with crashing xfree when running multiheaded
+	  multiscreen.
+
 2003-04-04  Christian Ruppert <arc@users.sf.net>
 	* uwm/configconvertors.c: added derefptr macro and fixed uopt_str_fnt.
 	* uwm/confparse.y: added prototype for workspace configuration
